fix contraste

--- a/public/src/styles/global.scss
+++ b/public/src/styles/global.scss
@@ -18,3 +18,6 @@ table {
 .fr-content-media__img img{
   aspect-ratio: 1 !important;
 }
+.Mui-focusVisible{
+  background-color: #bbbbfc !important;
+}
